Kubernetes_Template/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-pod
  labels:
    app: chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatapp
  template:
    metadata:
      labels:
        app: chatapp
    spec:
      containers:
      - name: backend-container
        image: 022334287241.dkr.ecr.us-east-1.amazonaws.com/docker_backend:latest
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: chatapp
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app: chatapp
